<resources>
    <string name="app_name">Groove</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_disc_summ">Do you want others to see you?</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Home Page -->
    <string name="button_disc_set">Discovery Settings</string>

    <string name="button_app_set">App Notification Settings</string>

    <string name="button_about_help">Help</string>
    <!-- End Home Page -->

    <!-- Profile Page -->
    <string name="about_you">About You (500 Char)</string>
    <!-- End Profile Page -->

    <!-- App Settings -->
    <string name="app_notif_title">App Notification Settings</string>

    <string name="pref_new_match">New Match Notifications</string>

    <string name="pref_new_mess">New Message Notifications</string>

    <string name="pref_new_like">New Like Notifications</string>
    <!-- App Settings -->

    <!-- Discovery Settings -->
    <string name="pref_header_disc_set">Discovery &amp; Settings</string>
    <string name="pref_inst_search_title">Instruments</string>
    <string name="pref_inst_search_summ">What instruments are you looking for?</string>
    <string-array name="pref_inst_search_values">
        <item>Guitar</item>
        <item>Vocals</item>
        <item>Drums</item>
        <item>Bass</item>
        <item>Piano</item>
        <item>Organ</item>
        <item>Trumpet</item>
        <item>Bassoon</item>
        <item>Clarinet</item>
        <item>Oud</item>
    </string-array>

    <string name="pref_genre_search_title">Genres</string>
    <string name="pref_genre_search_summ">What type of music do you want to play?</string>
    <string-array name="pref_genre_search_values">
        <item>Rock</item>
        <item>Metal</item>
        <item>Punk</item>
        <item>Blues</item>
        <item>Funk</item>
        <item>Jazz</item>
        <item>Soul</item>
        <item>Motown</item>
        <item>Country</item>
        <item>Classical</item>
    </string-array>
    <!-- End Discovery Settings -->

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="messengerName">Cody Rice</string>
    <string name="messagePrev">Hello, how are you?</string>

</resources>
