<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="discovery_switch"
        android:summary="@string/pref_disc_summ"
        android:title="Discovery" />

    <MultiSelectListPreference
        android:entries="@array/pref_inst_search_values"
        android:entryValues="@array/pref_inst_search_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_inst_search_summ"
        android:title="@string/pref_inst_search_title" />

    <MultiSelectListPreference
        android:entries="@array/pref_genre_search_values"
        android:entryValues="@array/pref_genre_search_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_genre_search_summ"
        android:title="@string/pref_genre_search_title" />

</PreferenceScreen>