<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/alert_dark_frame"
        android:id="@+id/imageButton3" />

    <Button
        android:text="@string/button_disc_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:visibility="visible"
        android:textAlignment="textStart" />

    <Button
        android:text="@string/button_app_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:visibility="visible"
        android:textAlignment="textStart" />

    <Button
        android:text="@string/button_about_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:visibility="visible"
        android:textAlignment="textStart" />
</LinearLayout>